--- a/src/main/resources/com/main/datenpunk/detail-view.fxml
+++ b/src/main/resources/com/main/datenpunk/detail-view.fxml
@@ -7,12 +7,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.DetailController">
    <children>
-      <TextField fx:id="nameField" layoutX="46.0" layoutY="71.0" />
-      <TextField fx:id="typeField" layoutX="226.0" layoutY="71.0" />
-      <TextField fx:id="statusField" layoutX="412.0" layoutY="71.0" />
+      <TextField fx:id="nameField" layoutX="46.0" layoutY="71.0" onAction="#onUpdatePressed" />
+      <TextField fx:id="typeField" layoutX="226.0" layoutY="71.0" onAction="#onUpdatePressed" />
+      <TextField fx:id="statusField" layoutX="412.0" layoutY="71.0" onAction="#onUpdatePressed" />
       <TableView fx:id="historyTable" layoutX="200.0" layoutY="129.0" prefHeight="200.0" prefWidth="200.0">
         <columns>
           <TableColumn fx:id="statusColumn" prefWidth="75.0" text="Status" />
