--- a/src/main/resources/com/main/datenpunk/detail-view.fxml
+++ b/src/main/resources/com/main/datenpunk/detail-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,7 +12,6 @@
    <children>
       <TextField fx:id="nameField" layoutX="46.0" layoutY="71.0" onAction="#onUpdatePressed" />
       <TextField fx:id="typeField" layoutX="226.0" layoutY="71.0" onAction="#onUpdatePressed" />
-      <TextField fx:id="statusField" layoutX="412.0" layoutY="71.0" onAction="#onUpdatePressed" />
       <TableView fx:id="historyTable" layoutX="200.0" layoutY="129.0" prefHeight="200.0" prefWidth="200.0">
         <columns>
           <TableColumn fx:id="statusColumn" prefWidth="75.0" text="Status" />
@@ -25,5 +25,6 @@
       <Label layoutX="226.0" layoutY="54.0" text="Type:" />
       <Label layoutX="412.0" layoutY="54.0" text="Status:" />
       <Button layoutX="275.0" layoutY="361.0" mnemonicParsing="false" onAction="#onUpdatePressed" text="Update" />
+      <ChoiceBox fx:id="statusBox" layoutX="412.0" layoutY="71.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
