--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox alignment="CENTER" prefHeight="282.0" prefWidth="318.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-    <Button onAction="#onNewObject" text="New Object" />
-   <TableView fx:id="objectTable" onMouseClicked="#onTableClick" prefHeight="200.0" prefWidth="200.0">
-     <columns>
-       <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-       <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Type" />
-         <TableColumn fx:id="statusColumn" prefWidth="75.0" text="Status" />
-     </columns>
-      <columnResizePolicy>
-         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-      </columnResizePolicy>
-   </TableView>
-</VBox>
+
+<AnchorPane prefHeight="671.0" prefWidth="429.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
+   <children>
+      <TableView fx:id="objectTable" layoutX="39.0" layoutY="131.0" onMouseClicked="#onTableClick" prefHeight="487.0" prefWidth="341.0">
+        <columns>
+          <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
+          <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Type" />
+            <TableColumn fx:id="statusColumn" prefWidth="75.0" text="Status" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Button layoutX="324.0" layoutY="81.0" onAction="#updateTable" text="Refresh" />
+       <Button layoutX="39.0" layoutY="81.0" onAction="#onNewObject" text="New Object" />
+   </children>
+</AnchorPane>
