--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="671.0" prefWidth="429.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
    <children>
@@ -20,5 +20,7 @@
       </TableView>
       <Button layoutX="324.0" layoutY="81.0" onAction="#updateTable" text="Refresh" />
        <Button layoutX="39.0" layoutY="81.0" onAction="#onNewObject" text="New Object" />
+      <DatePicker fx:id="datePicker" layoutX="39.0" layoutY="32.0" onAction="#getDate" />
+      <Button layoutX="224.0" layoutY="32.0" onAction="#onReset" text="Reset" />
    </children>
 </AnchorPane>
