--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -1,26 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="671.0" prefWidth="429.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
+
+<AnchorPane prefHeight="1385.0" prefWidth="1022.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
    <children>
-      <TableView fx:id="objectTable" layoutX="39.0" layoutY="131.0" onMouseClicked="#onTableClick" prefHeight="487.0" prefWidth="341.0">
-        <columns>
-          <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-          <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Type" />
-            <TableColumn fx:id="statusColumn" prefWidth="75.0" text="Status" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Button layoutX="324.0" layoutY="81.0" onAction="#updateTable" text="Refresh" />
-       <Button layoutX="39.0" layoutY="81.0" onAction="#onNewObject" text="New Object" />
-      <DatePicker fx:id="datePicker" layoutX="39.0" layoutY="32.0" onAction="#getDate" />
-      <Button layoutX="224.0" layoutY="32.0" onAction="#onReset" text="Reset" />
+      <MenuBar layoutX="-245.0" layoutY="13.0" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="1018.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#onCancel" text="Close" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Project">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#onNewObject" text="New Object" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Show/Hide">
+               <items>
+                  <CheckMenuItem fx:id="idCheck" mnemonicParsing="false" onAction="#onCheckVisible" text="id" />
+                  <CheckMenuItem fx:id="nameCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Name" />
+                  <CheckMenuItem fx:id="typeCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Type" />
+                  <CheckMenuItem fx:id="statusCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Status" />
+                  <CheckMenuItem fx:id="dateCheck" mnemonicParsing="false" onAction="#onCheckVisible" text="Date" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+      <ScrollPane layoutY="24.0" pannable="true" prefHeight="1364.0" prefWidth="1022.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="24.0">
+         <content>
+            <VBox fillWidth="false" prefHeight="1389.0" prefWidth="1007.0">
+               <children>
+                  <AnchorPane prefHeight="65.0" prefWidth="1007.0">
+                     <children>
+                        <DatePicker fx:id="datePicker" layoutX="14.0" layoutY="20.0" onAction="#getDate" />
+                        <Button layoutX="197.0" layoutY="20.0" onAction="#onReset" text="Reset" />
+                     </children>
+                  </AnchorPane>
+                  <TitledPane expanded="false" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="1007.0" text="Whitelist">
+                     <content>
+                        <AnchorPane prefHeight="207.0" prefWidth="1005.0">
+                           <children>
+                              <TextField layoutX="14.0" layoutY="35.0" />
+                              <ListView layoutX="14.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <Label layoutX="14.0" layoutY="10.0" text="Name:" />
+                              <TextField layoutX="181.0" layoutY="35.0" />
+                              <ListView layoutX="181.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <Label layoutX="181.0" layoutY="10.0" text="Type:" />
+                              <ListView layoutX="353.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <Label layoutX="353.0" layoutY="10.0" text="Status:" />
+                              <ChoiceBox layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane expanded="false" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="1007.0" text="Blacklist">
+                     <content>
+                        <AnchorPane prefHeight="207.0" prefWidth="1005.0">
+                           <children>
+                              <TextField layoutX="14.0" layoutY="35.0" />
+                              <ListView layoutX="14.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <Label layoutX="14.0" layoutY="10.0" text="Name:" />
+                              <TextField layoutX="181.0" layoutY="35.0" />
+                              <ListView layoutX="181.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <Label layoutX="181.0" layoutY="10.0" text="Type:" />
+                              <ListView layoutX="353.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <Label layoutX="353.0" layoutY="10.0" text="Status:" />
+                              <ChoiceBox layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane maxWidth="1.7976931348623157E308" prefHeight="1249.0" prefWidth="1007.0" text="Table">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="395.0" prefWidth="927.0">
+                           <children>
+                              <TableView fx:id="objectTable" layoutX="18.0" layoutY="52.0" onMouseClicked="#onTableClick" prefHeight="1223.0" prefWidth="970.0">
+                                <columns>
+                                    <TableColumn fx:id="idColumn" prefWidth="30.0" text="id" />
+                                  <TableColumn fx:id="nameColumn" minWidth="150.0" prefWidth="-1.0" text="Name" />
+                                  <TableColumn fx:id="typeColumn" minWidth="150.0" prefWidth="-1.0" text="Type" />
+                                    <TableColumn fx:id="statusColumn" minWidth="150.0" prefWidth="-1.0" text="Status" />
+                                    <TableColumn fx:id="dateColumn" minWidth="150.0" prefWidth="188.6666259765625" text="Date" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <Button layoutX="932.0" layoutY="14.0" onAction="#updateTable" text="Refresh" />
+                               <Button layoutX="18.0" layoutY="14.0" onAction="#onNewObject" text="New Object" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </TitledPane>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
