--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -17,10 +17,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="1385.0" prefWidth="1022.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
+<AnchorPane prefHeight="1280.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
    <children>
-      <MenuBar layoutX="-245.0" layoutY="13.0" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="1018.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <MenuBar layoutX="-245.0" layoutY="13.0" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="1930.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <menus>
             <Menu mnemonicParsing="false" text="File">
                <items>
@@ -43,9 +42,9 @@
             </Menu>
          </menus>
       </MenuBar>
-      <ScrollPane layoutY="24.0" pannable="true" prefHeight="1364.0" prefWidth="1022.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="24.0">
+      <ScrollPane layoutY="24.0" prefHeight="1364.0" prefWidth="1022.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
          <content>
-            <VBox fillWidth="false" prefHeight="1389.0" prefWidth="1007.0">
+            <VBox prefHeight="1389.0" prefWidth="1916.0">
                <children>
                   <AnchorPane prefHeight="65.0" prefWidth="1007.0">
                      <children>
@@ -53,36 +52,48 @@
                         <Button layoutX="197.0" layoutY="20.0" onAction="#onReset" text="Reset" />
                      </children>
                   </AnchorPane>
-                  <TitledPane expanded="false" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="1007.0" text="Whitelist">
+                  <TitledPane layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="18.0" prefWidth="1916.0" text="Whitelist">
                      <content>
-                        <AnchorPane prefHeight="207.0" prefWidth="1005.0">
+                        <AnchorPane prefHeight="240.0" prefWidth="1914.0">
                            <children>
-                              <TextField layoutX="14.0" layoutY="35.0" />
-                              <ListView layoutX="14.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <TextField fx:id="whitelistNameField" layoutX="14.0" layoutY="35.0" onAction="#onAddToList" />
+                              <ListView fx:id="whitelistNameList" layoutX="14.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
                               <Label layoutX="14.0" layoutY="10.0" text="Name:" />
-                              <TextField layoutX="181.0" layoutY="35.0" />
-                              <ListView layoutX="181.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <TextField fx:id="whitelistTypeField" layoutX="181.0" layoutY="35.0" onAction="#onAddToList" />
+                              <ListView fx:id="whitelistTypeList" layoutX="181.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
                               <Label layoutX="181.0" layoutY="10.0" text="Type:" />
-                              <ListView layoutX="353.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <ListView fx:id="whitelistStatusList" layoutX="353.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
                               <Label layoutX="353.0" layoutY="10.0" text="Status:" />
-                              <ChoiceBox layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
+                              <ChoiceBox fx:id="whitelistStatusBox" layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
+                              <Button fx:id="addToNameWhitelist" layoutX="14.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
+                              <Button fx:id="removeFromNameWhitelist" layoutX="103.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
+                              <Button fx:id="addToTypeWhitelist" layoutX="181.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
+                              <Button fx:id="removeFromTypeWhitelist" layoutX="270.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
+                              <Button fx:id="addToStatusWhitelist" layoutX="354.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
+                              <Button fx:id="removeFromStatusWhitelist" layoutX="443.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
                            </children>
                         </AnchorPane>
                      </content>
                   </TitledPane>
-                  <TitledPane expanded="false" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="1007.0" text="Blacklist">
+                  <TitledPane maxWidth="1.7976931348623157E308" prefHeight="18.0" prefWidth="1916.0" text="Blacklist">
                      <content>
                         <AnchorPane prefHeight="207.0" prefWidth="1005.0">
                            <children>
-                              <TextField layoutX="14.0" layoutY="35.0" />
-                              <ListView layoutX="14.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <TextField fx:id="blacklistNameField" layoutX="14.0" layoutY="35.0" onAction="#onAddToList" />
+                              <ListView fx:id="blacklistNameList" layoutX="14.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
                               <Label layoutX="14.0" layoutY="10.0" text="Name:" />
-                              <TextField layoutX="181.0" layoutY="35.0" />
-                              <ListView layoutX="181.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <TextField fx:id="blacklistTypeField" layoutX="181.0" layoutY="35.0" onAction="#onAddToList" />
+                              <ListView fx:id="blacklistTypeList" layoutX="181.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
                               <Label layoutX="181.0" layoutY="10.0" text="Type:" />
-                              <ListView layoutX="353.0" layoutY="80.0" prefHeight="97.0" prefWidth="149.0" />
+                              <ListView fx:id="blacklistStatusList" layoutX="353.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
                               <Label layoutX="353.0" layoutY="10.0" text="Status:" />
-                              <ChoiceBox layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
+                              <ChoiceBox fx:id="blacklistStatusBox" layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
+                              <Button fx:id="addToNameBlacklist" layoutX="14.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
+                              <Button fx:id="removeFromNameBlacklist" layoutX="103.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
+                              <Button fx:id="addToTypeBlacklist" layoutX="181.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
+                              <Button fx:id="removeFromTypeBlacklist" layoutX="270.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
+                              <Button fx:id="addToStatusBlacklist" layoutX="354.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
+                              <Button fx:id="removeFromStatusBlacklist" layoutX="443.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
                            </children>
                         </AnchorPane>
                      </content>
@@ -91,7 +102,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="395.0" prefWidth="927.0">
                            <children>
-                              <TableView fx:id="objectTable" layoutX="18.0" layoutY="52.0" onMouseClicked="#onTableClick" prefHeight="1223.0" prefWidth="970.0">
+                              <TableView fx:id="objectTable" layoutX="18.0" layoutY="52.0" onMouseClicked="#onTableClick" prefHeight="1223.0" prefWidth="1863.0">
                                 <columns>
                                     <TableColumn fx:id="idColumn" prefWidth="30.0" text="id" />
                                   <TableColumn fx:id="nameColumn" minWidth="150.0" prefWidth="-1.0" text="Name" />
@@ -99,11 +110,8 @@
                                     <TableColumn fx:id="statusColumn" minWidth="150.0" prefWidth="-1.0" text="Status" />
                                     <TableColumn fx:id="dateColumn" minWidth="150.0" prefWidth="188.6666259765625" text="Date" />
                                 </columns>
-                                 <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                 </columnResizePolicy>
                               </TableView>
-                              <Button layoutX="932.0" layoutY="14.0" onAction="#updateTable" text="Refresh" />
+                              <Button layoutX="1825.0" layoutY="14.0" onAction="#updateTable" text="Refresh" />
                                <Button layoutX="18.0" layoutY="14.0" onAction="#onNewObject" text="New Object" />
                            </children>
                         </AnchorPane>
