--- a/src/main/resources/com/main/datenpunk/projectSelection-view.fxml
+++ b/src/main/resources/com/main/datenpunk/projectSelection-view.fxml
@@ -13,17 +13,16 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.ProjectSelectionController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem mnemonicParsing="false" text="New Project" />
-                  <MenuItem mnemonicParsing="false" text="Open" />
+                  <MenuItem mnemonicParsing="false" onAction="#onNew" text="New Project" />
+                  <MenuItem mnemonicParsing="false" onAction="#onOpenFromFile" text="Open" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#onClose" text="Close" />
             </items>
           </Menu>
         </menus>
@@ -38,15 +37,15 @@
                      <children>
                         <HBox>
                            <children>
-                              <Button mnemonicParsing="false" text="Open">
+                              <Button mnemonicParsing="false" onAction="#onOpen" text="Open">
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false" text="New" />
+                              <Button mnemonicParsing="false" onAction="#onNew" text="New" />
                            </children>
                         </HBox>
-                        <TextField promptText="Search">
+                        <TextField fx:id="searchBar" onKeyTyped="#onSearch" promptText="Search">
                            <VBox.margin>
                               <Insets top="10.0" />
                            </VBox.margin>
@@ -55,7 +54,7 @@
                   </VBox>
                </left>
                <right>
-                  <Button mnemonicParsing="false" text="Delete" BorderPane.alignment="TOP_CENTER" />
+                  <Button mnemonicParsing="false" onAction="#onDelete" text="Delete" BorderPane.alignment="TOP_CENTER" />
                </right>
                <BorderPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -63,12 +62,12 @@
             </BorderPane>
          </top>
          <center>
-            <TableView BorderPane.alignment="CENTER">
+            <TableView fx:id="projectTable" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn minWidth="50.0" prefWidth="150.0" text="Name" />
-                <TableColumn minWidth="50.0" prefWidth="150.0" text="Last Visited" />
-                  <TableColumn prefWidth="150.0" text="Created At" />
-                  <TableColumn prefWidth="150.0" text="Location" />
+                <TableColumn fx:id="nameColumn" minWidth="50.0" prefWidth="150.0" text="Name" />
+                <TableColumn fx:id="lastVisitedColumn" minWidth="50.0" prefWidth="150.0" text="Last Visited" />
+                  <TableColumn fx:id="createdAtColumn" prefWidth="150.0" text="Created At" />
+                  <TableColumn fx:id="locationColumn" prefWidth="150.0" text="Location" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
