--- a/src/main/resources/com/main/datenpunk/databaseConnection-view.fxml
+++ b/src/main/resources/com/main/datenpunk/databaseConnection-view.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="190.0" prefWidth="353.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.DatabaseConnectionController">
    <children>
-      <Label layoutX="72.0" layoutY="77.0" text="Password:" />
+      <Label layoutX="72.0" layoutY="61.0" text="Password:" />
       <Button layoutX="213.0" layoutY="139.0" mnemonicParsing="false" onAction="#onConnect" text="Connect" />
       <Button layoutX="86.0" layoutY="139.0" mnemonicParsing="false" onAction="#onCancel" text="Cancel" />
-      <PasswordField fx:id="passwordField" layoutX="138.0" layoutY="73.0" onAction="#onConnect" />
+      <PasswordField fx:id="passwordField" layoutX="138.0" layoutY="57.0" onAction="#onConnect" />
+      <CheckBox fx:id="remenberMe" layoutX="72.0" layoutY="95.0" mnemonicParsing="false" selected="true" text="Remember me" />
    </children>
 </AnchorPane>
