--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -19,7 +20,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
+<BorderPane prefHeight="772.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
    <center>
       <ScrollPane>
          <content>
@@ -29,7 +30,7 @@
                      <children>
                         <TitledPane expanded="false" text="Whitelist">
                            <content>
-                              <AnchorPane prefHeight="240.0" prefWidth="1914.0">
+                              <AnchorPane prefHeight="240.0">
                                  <children>
                                     <TextField fx:id="whitelistNameField" layoutX="14.0" layoutY="35.0" onAction="#onAddToList" />
                                     <ListView fx:id="whitelistNameList" layoutX="14.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
@@ -52,7 +53,7 @@
                         </TitledPane>
                         <TitledPane expanded="false" text="Blacklist">
                            <content>
-                              <AnchorPane prefHeight="207.0" prefWidth="1005.0">
+                              <AnchorPane prefHeight="207.0">
                                  <children>
                                     <TextField fx:id="blacklistNameField" layoutX="14.0" layoutY="35.0" onAction="#onAddToList" />
                                     <ListView fx:id="blacklistNameList" layoutX="14.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
@@ -77,7 +78,7 @@
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0">
                                  <children>
-                                    <BorderPane layoutX="18.0" layoutY="8.0" maxWidth="1.7976931348623157E308" prefHeight="43.0">
+                                    <BorderPane layoutX="18.0" layoutY="8.0" prefHeight="43.0">
                                        <left>
                                            <Button onAction="#onNewObject" text="New Object" BorderPane.alignment="CENTER" />
                                        </left>
@@ -126,6 +127,9 @@
          <menus>
             <Menu mnemonicParsing="false" text="File">
                <items>
+                  <MenuItem mnemonicParsing="false" onAction="#onNewProject" text="New Project" />
+                  <MenuItem mnemonicParsing="false" onAction="#onProjectSelection" text="Project Selection" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#onCancel" text="Close" />
                </items>
             </Menu>
@@ -140,7 +144,7 @@
                   <CheckMenuItem fx:id="nameCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Name" />
                   <CheckMenuItem fx:id="typeCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Type" />
                   <CheckMenuItem fx:id="statusCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Status" />
-                  <CheckMenuItem fx:id="dateCheck" mnemonicParsing="false" onAction="#onCheckVisible" text="Date" />
+                  <CheckMenuItem fx:id="dateCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Date" />
                </items>
             </Menu>
          </menus>
