--- a/src/main/resources/com/main/datenpunk/projectSelection-view.fxml
+++ b/src/main/resources/com/main/datenpunk/projectSelection-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -34,54 +35,58 @@
       </MenuBar>
    </top>
    <center>
-      <BorderPane BorderPane.alignment="CENTER">
-         <top>
-            <BorderPane BorderPane.alignment="CENTER">
-               <left>
-                  <VBox BorderPane.alignment="CENTER">
-                     <children>
-                        <HBox>
+      <ScrollPane BorderPane.alignment="CENTER">
+         <content>
+            <BorderPane>
+               <top>
+                  <BorderPane BorderPane.alignment="CENTER">
+                     <left>
+                        <VBox BorderPane.alignment="CENTER">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#onOpen" text="Open">
-                                 <HBox.margin>
-                                    <Insets right="10.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <Button mnemonicParsing="false" onAction="#onNew" text="New" />
+                              <HBox>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#onOpen" text="Open">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#onNew" text="New" />
+                                 </children>
+                              </HBox>
+                              <TextField fx:id="searchBar" onKeyTyped="#onSearch" promptText="Search">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
                            </children>
-                        </HBox>
-                        <TextField fx:id="searchBar" onKeyTyped="#onSearch" promptText="Search">
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </TextField>
-                     </children>
-                  </VBox>
-               </left>
-               <right>
-                  <Button mnemonicParsing="false" onAction="#onDelete" text="Delete" BorderPane.alignment="TOP_CENTER" />
-               </right>
-               <BorderPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </BorderPane.margin>
+                        </VBox>
+                     </left>
+                     <right>
+                        <Button mnemonicParsing="false" onAction="#onDelete" text="Delete" BorderPane.alignment="TOP_CENTER" />
+                     </right>
+                     <BorderPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </BorderPane.margin>
+                  </BorderPane>
+               </top>
+               <center>
+                  <TableView fx:id="projectTable" BorderPane.alignment="CENTER">
+                    <columns>
+                      <TableColumn fx:id="nameColumn" minWidth="50.0" prefWidth="150.0" text="Name" />
+                      <TableColumn fx:id="lastVisitedColumn" minWidth="50.0" prefWidth="150.0" text="Last Visited" />
+                        <TableColumn fx:id="createdAtColumn" prefWidth="150.0" text="Created At" />
+                        <TableColumn fx:id="locationColumn" prefWidth="300.0" text="Location" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <BorderPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
+                     </BorderPane.margin>
+                  </TableView>
+               </center>
             </BorderPane>
-         </top>
-         <center>
-            <TableView fx:id="projectTable" BorderPane.alignment="CENTER">
-              <columns>
-                <TableColumn fx:id="nameColumn" minWidth="50.0" prefWidth="150.0" text="Name" />
-                <TableColumn fx:id="lastVisitedColumn" minWidth="50.0" prefWidth="150.0" text="Last Visited" />
-                  <TableColumn fx:id="createdAtColumn" prefWidth="150.0" text="Created At" />
-                  <TableColumn fx:id="locationColumn" prefWidth="300.0" text="Location" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-               <BorderPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" />
-               </BorderPane.margin>
-            </TableView>
-         </center>
-      </BorderPane>
+         </content>
+      </ScrollPane>
    </center>
 </BorderPane>
