--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -13,10 +12,9 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -94,18 +92,23 @@
                                                       <Button onAction="#updateTable" text="Refresh" BorderPane.alignment="CENTER" />
                                                    </right>
                                                    <bottom>
-                                                      <TableView fx:id="objectTable" prefHeight="1000.0" BorderPane.alignment="CENTER">
-                                                        <columns>
-                                                            <TableColumn fx:id="idColumn" prefWidth="30.0" text="id" />
-                                                          <TableColumn fx:id="nameColumn" minWidth="150.0" prefWidth="-1.0" text="Name" />
-                                                          <TableColumn fx:id="typeColumn" minWidth="150.0" prefWidth="-1.0" text="Type" />
-                                                            <TableColumn fx:id="statusColumn" minWidth="150.0" prefWidth="-1.0" text="Status" />
-                                                            <TableColumn fx:id="dateColumn" minWidth="150.0" prefWidth="188.6666259765625" text="Date" />
-                                                        </columns>
+                                                      <ScrollPane hbarPolicy="NEVER" maxHeight="1000.0" BorderPane.alignment="CENTER">
+                                                         <content>
+                                                            <SplitPane fx:id="objectTable" maxHeight="1.7976931348623157E308" prefWidth="650.0" style="-fx-padding: 0;">
+                                                               <items>
+                                                                  <VBox minWidth="0.0" prefHeight="200.0" prefWidth="100.0">
+                                                                     <children>
+                                                                        <Button minWidth="0.0" mnemonicParsing="false" style="-fx-background-radius: 0;" />
+                                                                        <ListView minWidth="0.0" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+                                                                     </children>
+                                                                  </VBox>
+                                                               </items>
+                                                            </SplitPane>
+                                                         </content>
                                                          <BorderPane.margin>
-                                                            <Insets top="10.0" />
+                                                            <Insets top="5.0" />
                                                          </BorderPane.margin>
-                                                      </TableView>
+                                                      </ScrollPane>
                                                    </bottom>
                                                 </BorderPane>
                                              </children>
@@ -215,15 +218,7 @@
                   <MenuItem mnemonicParsing="false" onAction="#onNewObject" text="New Object" />
                </items>
             </Menu>
-            <Menu mnemonicParsing="false" text="Show/Hide">
-               <items>
-                  <CheckMenuItem fx:id="idCheck" mnemonicParsing="false" onAction="#onCheckVisible" text="id" />
-                  <CheckMenuItem fx:id="nameCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Name" />
-                  <CheckMenuItem fx:id="typeCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Type" />
-                  <CheckMenuItem fx:id="statusCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Status" />
-                  <CheckMenuItem fx:id="dateCheck" mnemonicParsing="false" onAction="#onCheckVisible" selected="true" text="Date" />
-               </items>
-            </Menu>
+            <Menu fx:id="showHideMenu" mnemonicParsing="false" text="Show/Hide" />
          </menus>
       </MenuBar>
    </top>
