--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -34,7 +33,7 @@
                            <center>
                               <VBox>
                                  <children>
-                                    <TitledPane text="Whitelist">
+                                    <TitledPane expanded="false" text="Whitelist">
                                        <content>
                                           <TilePane fx:id="whiteListContainer">
                                              <padding>
@@ -43,7 +42,7 @@
                                           </TilePane>
                                        </content>
                                     </TitledPane>
-                                    <TitledPane text="Blacklist">
+                                    <TitledPane expanded="false" text="Blacklist">
                                        <content>
                                           <TilePane fx:id="blackListContainer">
                                              <padding>
@@ -56,33 +55,33 @@
                                       <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0">
                                              <children>
-                                                <BorderPane layoutX="18.0" layoutY="8.0" prefHeight="43.0">
-                                                   <left>
-                                                       <Button onAction="#onNewObject" text="New Object" BorderPane.alignment="CENTER" />
-                                                   </left>
-                                                   <right>
-                                                      <Button onAction="#updateTable" text="Refresh" BorderPane.alignment="CENTER" />
-                                                   </right>
-                                                   <bottom>
-                                                      <ScrollPane hbarPolicy="NEVER" maxHeight="1000.0" BorderPane.alignment="CENTER">
-                                                         <content>
-                                                            <SplitPane fx:id="objectTable" maxHeight="1.7976931348623157E308" prefWidth="650.0" style="-fx-padding: 0;">
-                                                               <items>
-                                                                  <VBox minWidth="0.0" prefHeight="200.0" prefWidth="100.0">
-                                                                     <children>
-                                                                        <Button minWidth="0.0" mnemonicParsing="false" prefWidth="9999.0" style="-fx-background-radius: 0;" />
-                                                                        <ListView minWidth="0.0" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
-                                                                     </children>
-                                                                  </VBox>
-                                                               </items>
-                                                            </SplitPane>
-                                                         </content>
-                                                         <BorderPane.margin>
-                                                            <Insets top="5.0" />
-                                                         </BorderPane.margin>
-                                                      </ScrollPane>
-                                                   </bottom>
-                                                </BorderPane>
+                                                <SplitPane fx:id="maxWidthPane" dividerPositions="0.5" layoutX="18.0" layoutY="8.0" prefWidth="4000.0">
+                                                   <items>
+                                                      <BorderPane fx:id="tableWidthContainer" prefHeight="43.0">
+                                                         <left>
+                                                             <Button onAction="#onNewObject" text="New Object" BorderPane.alignment="CENTER" />
+                                                         </left>
+                                                         <right>
+                                                            <Button onAction="#updateTable" text="Refresh" BorderPane.alignment="CENTER" />
+                                                         </right>
+                                                         <bottom>
+                                                            <VBox BorderPane.alignment="CENTER">
+                                                               <BorderPane.margin>
+                                                                  <Insets top="5.0" />
+                                                               </BorderPane.margin>
+                                                               <children>
+                                                                  <ScrollPane fx:id="maxHeightPane" VBox.vgrow="ALWAYS">
+                                                                     <content>
+                                                                        <SplitPane fx:id="objectTable" maxHeight="1.7976931348623157E308" style="-fx-padding: 0;" />
+                                                                     </content>
+                                                                  </ScrollPane>
+                                                               </children>
+                                                            </VBox>
+                                                         </bottom>
+                                                      </BorderPane>
+                                                      <AnchorPane />
+                                                   </items>
+                                                </SplitPane>
                                              </children>
                                           </AnchorPane>
                                       </content>
