--- a/src/main/resources/com/main/datenpunk/detail-view.fxml
+++ b/src/main/resources/com/main/datenpunk/detail-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -10,11 +11,12 @@
 <BorderPane prefHeight="371.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.DetailController">
    <center>
       <HBox alignment="CENTER">
-         <SplitPane fx:id="historyTable">
+         <ScrollPane>
             <HBox.margin>
                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
             </HBox.margin>
-         </SplitPane>
+            <SplitPane fx:id="historyTable"/>
+         </ScrollPane>
       </HBox>
    </center>
    <top>
